--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.5",
+    "date-fns": "^2.29.3",
     "microcms-js-sdk": "^2.3.2",
     "next": "13.1.5",
     "react": "18.2.0",
