--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.5",
     "date-fns": "^2.29.3",
+    "html-react-parser": "^3.0.8",
+    "html-to-text": "^9.0.3",
     "microcms-js-sdk": "^2.3.2",
     "next": "12.2.0",
     "react": "18.2.0",
