--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "html-to-text": "^9.0.3",
     "microcms-js-sdk": "^2.3.2",
     "next": "12.2.0",
+    "plaiceholder": "^2.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-fontawesome-svg-icon": "^1.1.2"
+    "react-fontawesome-svg-icon": "^1.1.2",
+    "sharp": "^0.31.3"
   }
 }
